tests/negative/key_on_non_object.disturb
n = (number){1};
x = n["a"];
